--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,5 @@ twitter_username: elon musk # DO NOT include the @ character, or else the build 
 github_username:  benniethedeveloper # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
-theme: minima 
+theme: minimа.
+
