--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: sirrachhha
+title: sirrachhhahhhah
 author: Bennie
 email: benazirt@redlodge.k12.mt.us
 description: > # this means to ignore newlines until "baseurl:"
