--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: "sirrachhhahhhah"
 author: Bennie
 email: benazirt@redlodge.k12.mt.us
 description: > # this means to ignore newlines until "baseurl:"
-  basically my website
+  <h1>basically my website</h1>
 # social links
 twitter_username: elon musk # DO NOT include the @ character, or else the build will fail!
 github_username:  benniethedeveloper # DO NOT include the @ character, or else the build will fail!
