--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "sirrachhhahhhah"
-author: Bennie
+layout: post
+title:  "Welcome to Jekyll!"
 email: benazirt@redlodge.k12.mt.us
 description: > # this means to ignore newlines until "baseurl:"
   <h1>basically my website</h1>
