--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@ layout: post
 title:  "Welcome to Jekyll!"
 email: benazirt@redlodge.k12.mt.us
 description: > # this means to ignore newlines until "baseurl:"
-  <h1>basically my website</h1>
+  basically my website
 # social links
-twitter_username: elon musk # DO NOT include the @ character, or else the build will fail!
-github_username:  benniethedeveloper # DO NOT include the @ character, or else the build will fail!
+twitter_username: "elon musk" # DO NOT include the @ character, or else the build will fail!
+github_username:  "benniethedeveloper" # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 theme: minima.
